UPDATED: Details page, next/previous now depends on which list it is using. ADDED: Phonegap Developer App support in "Main.bat". ADDED: Loading screen between pages. ADDED: Settings and Directory settings into global. MODIFIED: Moved some css styles around. FIXED: Had an issue with the fixed headers. FIXED: Audio now stops playing when navigating.

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -46,6 +46,9 @@ body {
 	background-size: auto 100% !important;
 }
 
+
+/* JQUERY OVERRIDES START */
+
 .ui-bar-a 
 .ui-shadow,
 .ui-btn-up-a,
@@ -85,7 +88,44 @@ body {
     margin: 0px 0px;
 }
 
-/* HELPERS */
+.ui-mobile .ui-page {
+	background-color: rgba(0, 0, 0, 0);
+	/*height: 100%;*/
+	padding: 0 !important;
+	min-height: 100%;
+	left: 0;
+	right: 0;
+}
+
+.ui-listview > .ui-li-divider {
+    padding-left: 0.5em;
+}
+
+.ui-block-a > .field
+{
+	font-weight : bold;
+	text-align: left;
+}
+
+.ui-grid-a,
+.ui-block-a {
+	position: relative;
+}
+
+.ui-grid-a-bottom {
+	position: absolute;
+	top: 84px;
+	bottom: 10px;
+	left: 0px;
+	right: 0px;
+	margin-left: 16px;
+	margin-right: 16px;
+}
+
+/* JQUERY OVERRIDES END */
+
+
+/* HELPERS START */
 
 .dock-top {
 	position: absolute;
@@ -132,7 +172,98 @@ body {
 	margin-right: auto;
 }
 
-/* HELPERS */
+/* HELPERS END */
+
+
+/* CLASSES START */
+
+.page {
+	min-height: 0 !important;
+	width: 100% !important;
+	height: 100% !important;
+}
+
+.pageheader {
+	position: absolute;
+	width: 100%;
+	height: 50px;
+}
+
+.pagefooter {
+    max-width: 100%;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+	max-height: 75px;
+}
+
+.content {
+	position: absolute;
+	top: 50px;
+	bottom: 56px;
+	left: 0;
+	right: 0;
+	padding: 0;
+}
+
+
+
+.new-list {
+	transform: translate3d(0,0,0);
+
+	position: absolute;
+	top: 50px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	overflow-x: hidden;
+
+	overflow-y: auto;
+	font-size: 16px;
+	text-shadow: none;
+}
+
+.new-list ul {
+	transform: translate3d(0,0,0);
+
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	/*background: #FFF;*/
+}
+
+.new-list li {
+	transform: translate3d(0,0,0);
+
+	position: relative;
+	margin: 0;
+	border-bottom: 1px solid #777;
+	background: rgba(255, 255, 255, 0.8) !important;
+	cursor: pointer;
+	padding: 10px;
+	height: 46px;
+}
+
+.new-list li:nth-child(even) {
+	background: #E0E0E0 !important;
+}
+.new-list li:nth-child(odd) {
+	background: #F0F0F0 !important;
+}
+
+.new-list-remove {
+	position: absolute;
+	width: 40px;
+	height: auto;
+	text-align: center;
+	display: inline-block;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+}
+
+/* CLASSES END */
 
 
 /*Home page styling*/
@@ -194,186 +325,24 @@ body {
 
 /*End Home page styling*/
 
-.page {
-	min-height: 0 !important;
-	width: 100% !important;
-	height: 100% !important;
-}
 
-.pageheader {
-	position: absolute;
-	width: 100%;
-	height: 50px;
-}
-
-.pagefooter {
-    max-width: 100%;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-	max-height: 75px;
-}
-
-#nextBackBtns
-{
-	position: absolute;
-	left: 0;
-	bottom: 0;
-	right: 0;
-}
-
-.ui-mobile .ui-page {
-	background-color: rgba(0, 0, 0, 0);
-	/*height: 100%;*/
-	padding: 0 !important;
-	min-height: 100%;
-	left: 0;
-	right: 0;
-}
-
+/*Details Page Styles*/
 #details-page {
 	color: #FFF !important;
 	text-shadow: none !important;
 }
 
-/*#details-page .ui-btn-active {
-	background-color: transparent;
-	border-color: transparent;
-	color: inherit;
-}*/
-
-#details-page .ui-header
+#details-page .pageheader
 {
 	height: 78px;
-}
-
-.ui-listview>.ui-li-divider {
-    padding-left: 0.5em;
-}
-
-.inlineIcon {
-    display: inline-block;
-    position: relative;
-    vertical-align: middle;
-    margin-right: 6px;
-}
-
-.new-list {
-	transform: translate3d(0,0,0);
-
-	position: absolute;
-	top: 50px;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	overflow-x: hidden;
-
-	overflow-y: auto;
-	font-size: 16px;
-	text-shadow: none;
-}
-
-.new-list ul {
-	transform: translate3d(0,0,0);
-
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	/*background: #FFF;*/
-}
-
-.new-list li {
-	transform: translate3d(0,0,0);
-
-	position: relative;
-	margin: 0;
-	border-bottom: 1px solid #777;
-	background: rgba(255, 255, 255, 0.8) !important;
-	cursor: pointer;
-	padding: 10px;
-	height: 50px;
-}
-
-/*.new-list li:nth-child(odd) {
-	background: #F0F0F0;
-}*/
-
-.new-list-remove {
-	position: absolute;
-	width: 40px;
-	height: auto;
-	text-align: center;
-	display: inline-block;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	margin: auto;
-}
-
-.search-hidden {
-	display: none;
-}
-
-
-
-.content {
-	position: absolute;
-	top: 50px;
-	bottom: 56px;
-	left: 0;
-	right: 0;
-	padding: 0;
 }
 
 #details-page > .content {
 	top: 78px;
 }
 
-.content-details {
+#details-page > .content > .content-details {
 	overflow-y: auto;
-}
-
-
-/* Details page styles */
-#old-play {
-	background: rgba(255,255,255,.8);
-	display: block;
-	border-radius: 5px;
-	color: rgb(51, 51, 51);
-	text-shadow: 0px 1px 0px rgb(243, 243, 243);
-}
-
-#playFav {
-	bottom: 60px;
-}
-/*.favourites {
-	position: absolute;
-	margin-bottom: 0px !important;
-}*/
-
-.ui-block-a > .field
-{
-	font-weight : bold;
-	text-align: left;
-}
-
-.ui-grid-a, .ui-block-a {
-	position: relative;
-}
-
-.ui-grid-a-bottom {
-	position: absolute;
-	top: 84px;
-	bottom: 10px;
-	left: 0px;
-	right: 0px;
-	margin-left: 16px;
-	margin-right: 16px;
-}
-
-.overflow-y
-{
-	overflow-y: scroll;
 }
 
 #detail-image
@@ -391,10 +360,12 @@ body {
 	background-size: contain; 
 }
 
-#detail-description.ui-bar.value {
+#detail-description {
 	height: 200px;
 	overflow-y: auto;
 }
+/*End Details Page Styles*/
+
 
 /*Information Page Styles*/
 #information-page {
